--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
+js-sys = "0.3.77"
 wasm-bindgen = "0.2.100"
 wee_alloc = "0.4.5"
 
