--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,7 +9,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3.77"
+log = "0.4.25"
 wasm-bindgen = "0.2.100"
+wasm-logger = "0.2.0"
 wee_alloc = "0.4.5"
 
 [profile.release]
