--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -12,6 +12,7 @@ js-sys = "0.3.77"
 log = "0.4.25"
 wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
+wasm-timer = "0.2.5"
 wee_alloc = "0.4.5"
 
 [profile.release]
