--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+anyhow = "1.0.95"
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3.77"
 log = "0.4.25"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
 wasm-timer = "0.2.5"
