--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -13,6 +13,7 @@ js-sys = "0.3.77"
 log = "0.4.25"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+static_assertions = "1.1.0"
 wasm-bindgen = "0.2.100"
 wasm-logger = "0.2.0"
 wasm-timer = "0.2.5"
