--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.95"
+byteorder = "1.5.0"
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3.77"
 log = "0.4.25"
