--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.95"
 base64 = "0.22.1"
 byteorder = "1.5.0"
 console_error_panic_hook = "0.1.7"
+crc = "3.2.1"
 js-sys = "0.3.77"
 log = "0.4.25"
 serde = { version = "1.0.217", features = ["derive"] }
