--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.97"
 axum = "0.8.1"
+bson = "2.13.0"
 clap = { version = "4.5.31", features = ["derive", "env"] }
 futures-util = "0.3.31"
 http-body-util = "0.1.2"
