--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ include_dir = "0.7.4"
 mime_guess = "2.0.5"
 mongodb = { version = "3.2.2", features = ["tracing-unstable"] }
 serde = "1.0.218"
+serde_json = "1.0.140"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.19"
 url = "2.5.4"
