--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,5 +16,6 @@ mongodb = { version = "3.2.2", features = ["tracing-unstable"] }
 serde = "1.0.218"
 serde_json = "1.0.140"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 url = "2.5.4"
